[gd_scene load_steps=11 format=3 uid="uid://djaluin63tqk7"]

[ext_resource type="Script" uid="uid://dtmjvpude32i5" path="res://scenes/startmenu/start_menu.gd" id="1_r6w2g"]
[ext_resource type="Texture2D" uid="uid://b00a2avv84uuh" path="res://scenes/startmenu/Game_title_page_ver_2.png" id="2_nphkf"]
[ext_resource type="AudioStream" uid="uid://vcn1lqnkjqw1" path="res://assets/audio/audio_made_sfx/menuopen1.wav" id="3_81owb"]
[ext_resource type="AudioStream" uid="uid://dhdmusl4cjtvx" path="res://assets/audio/audio_made_sfx/menuclose1.wav" id="4_3i3dk"]
[ext_resource type="AudioStream" uid="uid://dtu7ewvk6gi6b" path="res://assets/audio/audio_free_music/RPG - A Long Way From Home.mp3" id="4_nphkf"]
[ext_resource type="AudioStream" uid="uid://cykplnitlej1v" path="res://assets/audio/audio_free_sfx/MESSAGE-B_Accept.wav" id="4_q6o8g"]
[ext_resource type="FontFile" uid="uid://bl45x80hpnqyq" path="res://assets/font_free/Times New Roman MT Condensed Italic.otf" id="6_en0cg"]
[ext_resource type="PackedScene" uid="uid://c87obrsustkck" path="res://scenes/startmenu/startmenus_pausemenu.tscn" id="7_en0cg"]
[ext_resource type="PackedScene" uid="uid://s3api7hoq1u5" path="res://scenes/startmenu/startmenus_notemenu.tscn" id="8_q6o8g"]
[ext_resource type="PackedScene" uid="uid://chi5bd4bp8eiy" path="res://scenes/startmenu/startmenus_lvlselect.tscn" id="9_en0cg"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6w2g")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nphkf")
bus = &"Music"

[node name="sfx_nonstart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_81owb")
bus = &"SFX"

[node name="sfx_nonstart2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3i3dk")
bus = &"SFX"

[node name="sfx_start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_q6o8g")
pitch_scale = 0.85
bus = &"SFX"

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 4
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_nphkf")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -814.0
offset_top = -180.49
offset_right = 814.0
offset_bottom = 18.51
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button_Start" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
modulate = Color(0.976471, 0.866667, 0.65098, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_en0cg")
theme_override_font_sizes/font_size = 62
text = " Start "

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Button_Lvl" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
modulate = Color(0.976471, 0.866667, 0.65098, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_en0cg")
theme_override_font_sizes/font_size = 62
text = " Levels "

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Button_Options" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
modulate = Color(0.976471, 0.866667, 0.65098, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_en0cg")
theme_override_font_sizes/font_size = 62
text = " Options "

[node name="Label3" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Button_Note" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
modulate = Color(0.976471, 0.866667, 0.65098, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_en0cg")
theme_override_font_sizes/font_size = 62
text = " Notice "

[node name="Label4" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Button_Quit" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
modulate = Color(0.976471, 0.866667, 0.65098, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_en0cg")
theme_override_font_sizes/font_size = 62
text = " Quit "

[node name="Label3" type="Label" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Starts_PauseMenu" parent="." instance=ExtResource("7_en0cg")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Starts_NoteMenu" parent="." instance=ExtResource("8_q6o8g")]
visible = false
layout_mode = 1

[node name="Starts_LvlSelect" parent="." instance=ExtResource("9_en0cg")]
visible = false
layout_mode = 1

[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Button_Lvl" to="." method="_on_button_lvl_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Button_Options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Button_Note" to="." method="_on_button_note_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
